waiting for content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			</title>
 			<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/helper.css">
 		<link rel="stylesheet" href="css/theme.css">
 		<link rel="stylesheet" href="css/styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -24,11 +25,7 @@
 				<p>Use this space to show an innovation, service, or feature intended to make a company or product attractive to customers.</p>
 				</div>
 			</div>
-				<div class="row">
-					<div class="col-sm-2">
-						<hr>
-					</div>
-				</div>
+				
 				<div class="row">
 					<div class="col-sm-12">
 						<a href="#/" class="btn btn-default btn-lg">Call To Action</a>
@@ -42,10 +39,11 @@
 	<section class="top-features">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<img src="/images/features-0.jpg" alt="" alt="" class="img-responsive drop-shadow"  >
 				</div>
-				<div class="col-md-6">
+				<div class="padding visible-xs "></div>
+				<div class="col-sm-6">
 					<h1>Header 1</h1>
 					<p>Vestibulum mollis sodales tellus, sed porta lorem molestie vitae. Sed fermentum metus justo, in vestibulum felis imperdiet sed. Ut non purus sed sapien auctor pellentesque. Sed id sem elementum, placerat nibh upretium metus.</p>
 					<p> Vestibulum mollis sodales tellus, sed porta lorem molestie vitae. Sed fermentum metus justo, in vestibulum felis imperdiet sed. Ut non purus sed sapien auctor pellentesque. Sed id sem elementum, placerat nibh upretium metus.</p>
