added nav with logo
added nav

--- a/index.html
+++ b/index.html
@@ -16,16 +16,25 @@
 	</head>
 	
 	<body>
+		<nav class="navbar navbar-default navbar-fixed-top">
+		  <div class="container">
+		    <div class="navbar-header">
+		      <a class="navbar-brand center-mobile" href="#">
+		        <img alt="Brand" src="images/company-logo-large.png"  style="height:30px;">
+		      </a>
+		    </div>
+		  </div>
+		</nav>
 		<div class="jumbotron">
 			<div class="jumbotron-overlay">
 				<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 center-mobile">
-					<img src="images/logo-placeholder.png" alt="" class="logo img-responsive" >
-				<h1>Applicant Tracking System For HR Pros</h1>
-				<p>Talent Acquisition Simplified. </p>
+					
+					<h1>Applicant Tracking System For HR Pros</h1>
+					<p>Talent Acquisition Simplified. </p>
+					</div>
 				</div>
-			</div>
 				
 				<div class="row">
 					<div class="col-sm-12">
